[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-game-verify"
version = "0.1.0"
description = "Black-box functional verification prototype for game automation using YOLO26, OCR, and temporal assertions."
requires-python = ">=3.11"
dependencies = [
  "opencv-python>=4.9.0",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "ultralytics>=8.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]
ocr = [
  "pytesseract>=0.3.10"
]

[project.scripts]
yolo-game-verify = "yolo_game_verify.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
